--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ body {
 }
 
 #calculator {
-    display:flex;
+    display: flex;
     flex-wrap: wrap;
     gap: 10px;
 }
@@ -45,8 +45,8 @@ button {
     height: 62.5px;
     margin: 0;
     padding: 0;
-    font-size:large;
-    border:#ccc;
+    font-size: large;
+    border: #ccc;
     border-radius: 40px;
     background: linear-gradient(#0000, rgb(0 0 0/10%)) top/100% 2000%;
     transition: .2s;
@@ -69,20 +69,22 @@ button:hover {
     background-color: rgb(236, 197, 124);
 }
 
-#clear, #plusminus, #percent {
-    background-color:#c2c2c2;
+#clear,
+#plusminus,
+#percent {
+    background-color: #c2c2c2;
 }
 
 #title {
     position: absolute;
     bottom: 50px;
     right: 10px;
-    color:darkred;
+    color: darkred;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 45px;
-    width:418px;
+    width: 418px;
     padding: 0px;
     margin: 0px;
 }
